Final release version

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,10 +1,88 @@
 {
-    "theHolyQuran": "The Holy Quran",
+    "theHolyQuran": "The Holy Qur'an",
+    "home":"Home",
     "quranSubtitle": "Read and listen every verse of the holy Quran in Arabic and English",
     "hadith": "Hadith",
-    "hadithSubtitle": "A collection of traditions containing sayings of the Prophet Muhammed, with accounts of this daily practice",
+    "hadithSubtitle": "A collection of traditions containing sayings of the Prophet Muhammed, with accounts of his daily practice",
     "tasbeeh": "Tasbeeh",
     "tasbeehSubtitle":"Assist in the glorification of Allah following prayers: Tasbeeh, Tahmeed, and Takbeer",
     "duas": "Duas & Azkar",
-    "duasSubtitle":"A collection of duas and azkar for every situation" 
+    "duasSubtitle":"A collection of duas and azkar for every situation" ,
+    "numberOfAyahs": "Number of ayahs",
+    "highlightInfo": "Tap and hold on any Ayah to highlight and bookmark",
+    "translator": "Translator",
+    "settings": "Settings",
+    "theme":"Theme",
+    "themesub": "Customize app appearance",
+    "recitation":"Recitation",
+    "recitationsub":"Change recitation voice for audio Quran",
+    "continuee":"continue",
+    "ads": "Ads",
+    "adssub":"Ads settings",
+    "advanced":"Advanced",
+    "advancedset":"Advanced Settings",
+    "advancedsub":"Advanced application settings",
+    "report":"Report a problem",
+    "reportsub":"Report a problem, bug or feedback",
+    "darkMode":"Dark Mode",
+    "month": "Month",
+    "months":"Months",
+    "noAds":"No ads",
+    "somethingwrong":"Oops.. Something went wrong",
+    "sometingwrongsub":"Failed to connect, try again later",
+    "changelocsub":"Change the location settings to enable prayertimes",
+    "upcomingOffers":"UPCOMING OFFERS",
+    "additional":"If you have an active 3 or 12 months subscription the upcoming features will be added to your subscription for free on release",
+    "prayerTimes":"Prayer Times",
+    "calculmeth":"Calculation method",
+    "notifset":"Notification settings",
+    "noteWell":"Note well",
+    "notewellinfo":"On certain devices notification sounds and background notifications will not work due to the modified Android versions they use like Xiaoumi and Huawei, we are well aware of that and trying to solve the issue.",
+    "allownotif":"Allow notifications for",
+    "allownotifsub":"Select which prayers you want to get notified for",
+    "testnotif":"Test notification",
+    "testnotifsub":"Preview of what the notification will look like",
+    "notiftestbody":"This is a test notification",
+    "resetnotif":"Reset notification",
+    "resetnotifsub":"Only use this when notifications are not working",
+    "notiftitle":"Time for",
+    "notifbodyone":"Its time to pray Salat al",
+    "notifbodytwo":"May Allah Accept Your Prayers",
+    "automatically":"Automatically",
+    "autosub":"Checks live location on startup using gps",
+    "lastknown":"Last known location",
+    "lastknownsub":"Checks last known location, faster startup",
+    "manually":"Manually",
+    "manuallysub":"Set your location manually",
+    "language":"Choose Your Preffered Language",
+    "languagesub":"Please select your language",
+    "allowloc":"Allow Location Access",
+    "allowlocsub":"Access to your location is needed or set it manually",
+    "setmanually":"Set manually",
+    "or":"OR",
+    "godarkmode":"Go Dark Mode",
+    "godarkmodesub":"White too bright? Try out Dark Mode",
+    "loadingloc": "Loading location",
+    "lookinuploc":"Looking up location",
+    "locset":"Location Settings",
+    "retry":"Retry",
+    "errortitleloc":"Failed to lookup your location",
+    "errorsubloc":"Make sure you're connected to the Internet and press retry",
+    "errorsubloctwo":"Why do I need to be connected to the Internet?",
+    "errorsublocthree":"All the data in the app like Quran, Hadith, Audio files and Country names are stored online in order to keep the application size reasonable. \n \nThere's nothing to worry about since none of your data is being stored online.",
+    "errortitlecon":"Failed to connect to the Internet",
+    "errorsubcon":"For the first time you need to be connected to the Internet, next time you can come back offline. Connect to the Internet and tap here to retry",
+    "start":"Start",
+    "loading":"Loading",
+    "conlost":"Connection lost",
+    "noloc":"No location is set yet",
+    "setloc":"Set location"
+    ,"locfailure":"Failed to get location",
+    "locfailuresub":"Your device might not support this feature"
+    ,"tooltip":"This is saved and can be accessed offline",
+    "asmaAlHusnatitle":"Asma ul Husna",
+    "asmaAlHusna":"The 99 names of Allah are called 'Asma Ul Husna' which in Arabic means 'The Most Beautiful Names'",
+    "thankyou":"Thank you for your support",
+    "subscribed":"Subscribed",
+    "langset": "Language Settings"
 }
